samples/_failures_safe/1761426288_acf462_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73525dbf.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_73525dbf.c:167:13: error: expected ‘,’ or ‘;’ at end of input
  167 |             int right = parse_term
      |             ^~~
./samples/SAFE/__tmp_73525dbf.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73525dbf.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73525dbf.c:167:13: error: expected declaration or statement at end of input
